# ojo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml
crates/ojo/: Cargo.toml
crates/ojo-builder/: Cargo.toml
crates/ojo-builder/src/: lib.rs
crates/ojo-client/: Cargo.toml  build.rs
crates/ojo-client/src/: lib.rs  rseq.rs
crates/ojo-explorer/: Cargo.toml
crates/ojo-explorer/src/: lib.rs  main.rs
crates/ojo-watcher/: Cargo.toml
crates/ojo-watcher/src/: lib.rs  main.rs
crates/ojo/src/: ingester.rs  lib.rs  loader.rs  main.rs  server.rs
crates/ojo/static/: index.html
docs/: ARCHITECTURE.md
examples/simple/: Cargo.toml  build.rs
examples/simple/src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  hooks.ts
web/src/components/: Chart.tsx  Layout.tsx
web/src/hooks/: index.ts  useFlowData.ts
web/src/pages/: Dashboard.tsx  FlowDetail.tsx
web/src/services/: DataStore.ts
