[workspace]
members = [
    "crates/ojo-client",
    "crates/ojo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camshaft/ojo"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]

[workspace.dependencies]
# Shared dependencies across all crates
zerocopy = { version = "0.7", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
