[workspace]
members = [
    "crates/ojo",
    "crates/ojo-builder",
    "crates/ojo-client",
    "examples/simple",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/camshaft/ojo"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]

[workspace.dependencies]
fnv = "1"
zerocopy = { version = "0.7", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
