[package]
name = "ojo-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Low-overhead transport protocol event tracing client library"
keywords = ["tracing", "networking", "performance", "protocol", "debugging"]
categories = ["development-tools::profiling", "network-programming"]

[dependencies]
fnv.workspace = true
zerocopy.workspace = true
parking_lot = "0.12"
crossbeam-queue = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
