[package]
name = "ojo-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Watcher daemon for transforming ojo traces into queryable format"
keywords = ["tracing", "monitoring", "sqlite", "watcher"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
zerocopy.workspace = true

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "6.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
