[package]
name = "ojo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Transport protocol event tracer with watcher and web explorer"
keywords = ["tracing", "monitoring", "visualization", "watcher"]
categories = ["command-line-utilities", "development-tools::profiling"]

[[bin]]
name = "ojo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy.workspace = true

[dev-dependencies]
tempfile = "3.8"
