[package]
name = "ojo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Transport protocol event tracer with watcher and web explorer"
keywords = ["tracing", "monitoring", "visualization", "watcher"]
categories = ["command-line-utilities", "development-tools::profiling"]

[[bin]]
name = "ojo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
