[package]
name = "ojo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Transport protocol event tracer with watcher and web explorer"
keywords = ["tracing", "monitoring", "visualization", "watcher"]
categories = ["command-line-utilities", "development-tools::profiling"]

[[bin]]
name = "ojo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arrow = "56"
clap = { version = "4.4", features = ["derive"] }
duckdb = { version = "1.4", features = ["appender-arrow", "bundled", "vtab-arrow"] }
notify = "8.1"
parquet = "56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ojo-client = { path = "../ojo-client" }
tempfile = "3.8"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = { workspace = true, features = ["derive"] }
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
futures = "0.3.31"
base64 = "0.22.1"

[dev-dependencies]
